2004-02-29  Heikki Junes <hjunes@cc.hut.fi>

	* ly/property-init: new functions: \arpeggioUp, \arpeggioDown,
	\arpeggioBoth. redefine \arpeggioBracket.

	* Documentation/user/refman.itely: document new arpeggio
	functions.

	* scripts/convert-ly.py: add a rule for \arpeggioBracket.

	* input/regression/arpeggio-bracket.ly: apply convert-ly.

	* input/mutopia/R.Schumann/romanze-op28-2.ly: apply convert-ly.

2004-02-29  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/introduction.itely (Automated engraving):
	rewrite introduction using website text.

2004-02-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/*.scm: make-music-by-name is replaced by make-music, which
	also accept music property settings, eg:
	  (make-music 'TextScriptEvent 'direction DOWN 'text
	      (make-simple-markup x))

	Patch courtesy Nicolas Sceaux

	* lily/beam-quanting.cc: cleanup, separate counts for left and
	right beam ends.

	* lily/side-position-interface.cc (quantised_position): also
	quantize staccato position for forced stem directions. 

2004-02-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/*.scm: Patch by Nicolas Sceaux: 

	* scm/music-functions.scm: ly:grob-property and ly:music-property
	are made procedure with setters.

	* scm/*.scm: replace ..-set-property! with set! (..-property  )
	
2004-02-28  Heikki Junes <hjunes@cc.hut.fi>

	* input/test/[t-v]*.ly: finish rewriting texidocs.

	* input/test/vaticana.ly: remove.
	* input/test/ligature-vaticana.ly: new, renamed file name.

	* input/test/stem-centered.ly: remove.
	* input/test/mensural-note-heads.ly: new file. take content from
	removed file stem-centered.ly.

	* input/test/scales-greek.ly: simplify.

	* input/test/s*.ly: reformulate texidocs.
	
	* input/test/[p-r]*.ly: use more verbose texidocs. add comments
	of missing features.

2004-02-27  Heikki Junes <hjunes@cc.hut.fi>

	* input/test/[j-o]*.ly: update texidocs.

2004-02-27  Jan Nieuwenhuizen  <janneke@gnu.org>
