@@ -1,6 +1,6 @@
 PACKAGE_NAME=LilyPond
 MAJOR_VERSION=2
 MINOR_VERSION=1
-PATCH_LEVEL=27
-MY_PATCH_LEVEL=hjj1
+PATCH_LEVEL=28
+MY_PATCH_LEVEL=
 
