@@ -582,6 +582,7 @@ EasyNotation = \translator {
 	\consists "Figured_bass_engraver"
 	\consists "Rest_swallow_translator"
 	\consists "Note_swallow_translator"
+	\consists "Skip_event_swallow_translator"
 	\consists "Separating_line_group_engraver"
 	
 	\consistsend "Hara_kiri_engraver"
